gl51-master/src/test/deca/context/valid/testObject-RedefineInheritedMethod.deca
//Description
//Redefinition method héritée

class A {
    int x = 7;
    int getX(){
        return this.x;
    }
}
class B extends A {
    int getX(){
        return 4;
    }
}