gl51-master/src/test/deca/context/invalid/testObject_rule2_7DiffArgs.deca
//Description
//Method redefinie pas meme signature, arguments ici

class A {
    void x(int a) {}
}
class B extends A {
    void x(float a) {} //pas meme argument que premiere method
}


//passed
